--- a/PRGORAMING3/P5-game/index.html
+++ b/PRGORAMING3/P5-game/index.html
@@ -2,20 +2,19 @@
    <head>
       <link rel="stylesheet" href="aa.css">
        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-       <script src="class.js"></script>
-       <script src="krak.js"></script>
-        <script src="parasite.js"></script>
-       <script src="grassEater.js"></script>
-       <script src="predator.js"></script>
-       <script src="buton.js"></script>
-	  <script src="script.js"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+	  <script  src="script.js"></script>
    </head>
    <body>
-      <div id="kar" onclick="clic()" > Reload </div>
+      
+      <div id="kar" onclick="clic()" >Reload </div>
       <div class="flex">
-      <div id="sv" onclick="mb()">Spawn grassEater</div>
-      <div id="sx" onclick="nb()">Spawn predator</div>
-      <div id="sc" onclick="gb()">Kaycak</div>
+      <div id="sv" >Spawn grassEater</div>
+      <div id="sx" >Spawn predator</div>
+      <div id="sc" >hrdeh</div>
+      <div id="jamanak" >txt</div>
+      
    </div>
+  
    </body>
 </html>
